--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>主页--测试</title>
-</head>
-<body>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Leaf Link叶脉网络</title>
+    <meta name="description" content="Leaf Link is a cryptocurrency focussed on fast, cheap and reliable transactions. Leaf Link transactions have low fees and are confirmed every 24 seconds, which is much faster compared to other popular cryptocurrencies like Litecoin (2,5 minutes) and Bitcoin (10 minutes).">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google" value="notranslate">
+    <link rel="apple-touch-icon" href="https://viacoin.org/apple-touch-icon.png">
+    <link href="css/app.bundle.fc89afb69997af963a7d.css" rel="stylesheet">
+    <link href="css/fonts.css" rel="stylesheet">
+</head>
+
+<body class="has-background-blue-space">
+    <!--[if lt IE 8]>
+  <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
+    <script type="text/javascript" src="js/app.bundle.fc89afb69997af963a7d.js"></script>
 </body>
+
 </html>
