--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Leaf Link is a cryptocurrency focussed on fast, cheap and reliable transactions. Leaf Link transactions have low fees and are confirmed every 24 seconds, which is much faster compared to other popular cryptocurrencies like Litecoin (2,5 minutes) and Bitcoin (10 minutes).">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google" value="notranslate">
-    <link rel="apple-touch-icon" href="https://viacoin.org/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="./images/logo.png">
     <link href="css/app.bundle.fc89afb69997af963a7d.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
 </head>
@@ -23,6 +23,7 @@
   <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
     <script type="text/javascript" src="js/app.bundle.fc89afb69997af963a7d.js"></script>
+<!--<img src="./images/logo.png">-->
 </body>
 
 </html>
